User fully functional with email verification. Basic file uploader.

--- a/.env.template
+++ b/.env.template
@@ -31,3 +31,12 @@ APP_SECRET=bd72f29b633ca0dde65c244858958f80
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
+
+###> symfony/mailer ###
+# MAILER_DSN=smtp://
+###< symfony/mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://login:password@default
+###< symfony/google-mailer ###
