--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,8 @@
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
         "ext-fileinfo": "*",
-        "ext-exif": "*"
+        "ext-exif": "*",
+      "ext-json": "*"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
