--- a/.env.template
+++ b/.env.template
@@ -15,7 +15,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=bd72f29b633ca0dde65c244858958f80
+APP_SECRET=secret
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
